--- a/src/index.css
+++ b/src/index.css
@@ -26,4 +26,8 @@
   .input {
     @apply rounded-full border border-stone-200 px-4 py-2 text-sm transition-all duration-300 placeholder:text-stone-400 focus:outline-none focus:ring focus:ring-yellow-400 md:px-6 md:py-3;
   }
+
+  .shaodow-cs {
+    box-shadow: 2px 2px 15px rgba(115, 115, 115, 0.4);
+  }
 }
