some refactor and add a reusable loader and error components

--- a/src/index.css
+++ b/src/index.css
@@ -30,4 +30,27 @@
   .shaodow-cs {
     box-shadow: 2px 2px 15px rgba(115, 115, 115, 0.4);
   }
+
+  .spinner {
+    margin: 5rem auto;
+    text-align: center;
+
+    svg {
+      height: 6rem;
+      width: 6rem;
+      fill: orangered;
+      stroke: orangered;
+      animation: rotate 2s infinite linear;
+    }
+  }
+
+  @keyframes rotate {
+    0% {
+      transform: rotate(0);
+    }
+
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 }
